--- a/_posts/2021-01-29-glossary.md
+++ b/_posts/2021-01-29-glossary.md
@@ -5,7 +5,7 @@ description:
 layout: post
 toc: true
 comments: false
-categories: [Statistics, ML]
+categories: [Statistics, Machine Learning]
 sticky_rank: 1
 ---
 
